[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "mazing"
version     = "0.1"
description = "Module to generate and interacte with mazes written in C for fast performance."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3"
]

[[project.authors]]
name  = "Maksym Khavil"
email = "mk.khavil@gmail.com"
